Consistent neumorphism style over the entire website, dark mode (as default and unique theme :3), Fixed hydration errores on /me layout, Created index page (/page.tsx).

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,28 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+:root .clear {
+  --montserrat: 'Montserrat', sans-serif;
+  --base-font: var(--montserrat);
+  --black: #000000;
+  --blue: #8faae8;
+  --gold: #eab100;
+  --grey: #f9fafb;
+  --pink: #ff86af;
+  --white: #ffffff;
+  --profile-picture-size: 125px;
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
+  --montserrat: 'Montserrat', sans-serif;
+  --base-font: var(--montserrat);
+  --black: #ffffff;
+  --blue: #8faae8;;
+  --gold: #eab100; /* Color adaptado para que combine bien con el nuevo blue */
+  --pink: #ff86af;
+  --grey: #1a1a1a; /* Nuevo color de fondo para modo oscuro */
+  --white: #333333; /* Nuevo color para objetos en modo oscuro */
+  --default-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1), -5px -5px 15px rgba(255, 255, 255, 0.1);
+  --small-default-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1), -2px -2px 5px rgba(255, 255, 255, 0.1);
+  --hover-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2), -10px -10px 20px rgba(255, 255, 255, 0.1);
+  --sink-shadow:    0px 0px 3px 0px #333333,
+  0px 0px 3px 0px #333333,
+  0px 0px 3px 0px #0001,
+  0px 0px 3px 0px #0001,
+  inset 0px 0px 6px 0px #333333,
+  inset 0px 0px 4px 0px #333333,
+  inset 0px 0px 6px 0px #0003,
+  inset 0px 0px 4px 0px #0001;
+  --text-shadow: 0px 0px 3px #000000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
