--- a/app/me/MeStyle.module.css
+++ b/app/me/MeStyle.module.css
@@ -1,20 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap');
 
+.topContainer{
+    /* Items must be at top right, small margin to right */
+    @apply absolute top-0 right-0 mr-4 mt-4;
+}
+
+.topBubbleButton {
+    /* inline-block, rounded, background gray no shadow */
+    @apply justify-center w-auto h-12;
+    margin: 0 5px;
+    /* padding, small padding from top, to avoid uncentered image & text */
+    @apply px-4 py-1;
+    color: var(--black);
+    border-radius: 10px;
+    background-color: var(--white);
+    box-shadow: var(--small-default-shadow);
+    transition-duration: .23s
+}
+.topBubbleButton > p {
+    /* inline, centered, no margin */
+    @apply inline-block;
+    margin: 0 5px;
+}
+
+.topBubbleButton:hover {
+    box-shadow: var(--sink-shadow);
+}
 .layout {
     align-items: center;
     display: flex;
     justify-content: center;
     height: 100vh;
-    --montserrat: 'Montserrat', sans-serif;
-    --base-font: var(--montserrat);
-    --black: #000000;
-    --blue: #8faae8;
-    --gold: #eab100;
-    --grey: #f9fafb;
-    --pink: #ff86af;
-    --white: #ffffff;
-    --profile-picture-size: 125px;
     background-color: var(--grey);
+    --profile-picture-size: 125px;
 }
 
 @keyframes popUp {
@@ -42,14 +60,24 @@
 
 .profile {
     animation: popUp ease-in-out 350ms;
-    background: var(--white);
+    background: var(--white); /* --white is variable, it can be dark or light depending on the theme */
+    /* background layout uses --grey property to set the background color */
     border-radius: 25px;
-    box-shadow: 0 0 40px 0px rgba(var(--black), 0.17);
+    box-shadow: var(--default-shadow);
     margin-top: 40px;
     padding: 28px 30px 30px 35px;
     position: relative;
     width: 500px;
+    transition-duration: 0.3s;
 }
+
+.profile:hover {
+    box-shadow: var(--sink-shadow);
+}
+
+
+/* Ajustado el color de fondo para una transición más suave */
+
 
 .profilePicture {
     position: relative;
@@ -135,8 +163,7 @@
 }
 
 .skeleton {
-    /* write  a skeleton loader */
-    background: linear-gradient(90deg, #f9fafb 0px, #e9e9e9 50%, #f9fafb 100%);
+    background: linear-gradient(90deg, var(--grey) 0px, var(--white) 50%, var(--grey) 100%);
     background-size: 200px 100%;
     animation: skeleton 5.1s ease-in-out infinite;
     color: transparent;
@@ -171,6 +198,7 @@
     transition: background 250ms ease-in-out, color 250ms ease-in-out;
 }
 
+
 .profileButton:hover {
     background: var(--black);
     color: var(--white);
@@ -189,14 +217,30 @@
     opacity: 0;
     padding: 10px 4px;
     transform: translateY(5px);
+    box-shadow: var(--small-default-shadow);
+}
+
+.profileStat:hover {
+    box-shadow: var(--sink-shadow);
 }
 
 .profileStat:last-of-type {
     border-right: none;
 }
 
+.profileStat:hover > .profileValue{
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.profileStat:hover > .profileKey{
+    color: #ffffff;
+    cursor: pointer;
+}
+
 .profileStat:nth-child(1) {
     animation-delay: 400ms;
+    border-radius: 25px 0 0 25px;
     cursor: pointer;
     transition-duration: 0.5s;
 }
@@ -204,29 +248,30 @@
 .profileStat:nth-child(2) {
     animation-delay: 500ms;
     cursor: pointer;
+    border-radius: 0 25px 25px 0;
     transition-duration: 0.5s;
 }
 
 .profileStat:nth-child(1):hover {
-    border-radius: 50px 0 0 50px;
+    border-radius: 25px 0 0 25px;
     background: var(--blue);
-    color: var(--white);
+    color: #ffffff;
     cursor: pointer;
 }
 .profileStat:nth-child(1):hover > .profileIcon{
-    color: var(--white);
+    color: #ffffff;
     cursor: pointer;
 }
 
 .profileStat:nth-child(2):hover {
-    border-radius: 0 50px 50px 0;
+    border-radius: 0 25px 25px 0;
     background: var(--pink);
-    color: var(--white);
+    color: #ffffff;
     cursor: pointer;
 }
 
 .profileStat:nth-child(2):hover > .profileIcon{
-    color: var(--white);
+    color: #ffffff;
     cursor: pointer;
 }
 
